[tool.poetry]
name = "data_analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
Django = "~=3.2.6"
djangorestframework = "~=3.12.2"
numpy = "^1.21.2"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
